--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@babel/preset-react": "^7.0.0",
 		"babel-eslint": "^10.0.2",
 		"babel-loader": "^8.0.6",
+		"classnames": "^2.2.6",
 		"css-loader": "^3.0.0",
 		"eslint-plugin-async-await": "0.0.0",
 		"eslint-plugin-react": "^7.16.0",
