--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
 		"webpack-dev-server": "^3.7.2"
 	},
 	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.26",
+		"@fortawesome/free-regular-svg-icons": "^5.12.0",
+		"@fortawesome/free-solid-svg-icons": "^5.12.0",
+		"@fortawesome/react-fontawesome": "^0.1.8",
 		"eslint": "^6.0.1",
 		"immutable": "^4.0.0-rc.12",
 		"react": "^16.8.6",
