--- a/package.json
+++ b/package.json
@@ -41,17 +41,10 @@
 		"@fortawesome/free-solid-svg-icons": "^5.12.0",
 		"@fortawesome/react-fontawesome": "^0.1.8",
 		"eslint": "^6.0.1",
-		"immutable": "^4.0.0-rc.12",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-loadable": "^5.5.0",
-		"react-redux": "^7.1.0",
 		"react-router": "^5.0.1",
-		"react-router-dom": "^5.0.1",
-		"redux": "^4.0.1",
-		"redux-devtools-extension": "^2.13.8",
-		"redux-logger": "^3.0.6",
-		"redux-observable": "^1.2.0",
-		"rxjs": "^6.5.4"
+		"react-router-dom": "^5.0.1"
 	}
 }
